Criação de metodos update e delete para usuários
